--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/jpeg" href="/src/assets/budget.jpeg" />
+    <link rel="icon" type="image/jpeg" href="/src/assets/favicon.svg" />
     <title>GEO-TRESOR</title>
   </head>
   <body>
